--- a/client/main.css
+++ b/client/main.css
@@ -1,7 +1,5 @@
-body {
+/* body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
   background-attachment: fixed;
 
   position: absolute;
@@ -191,4 +189,4 @@ header {
   align-items: center;
 
   font-weight: bold;
-}
+} */
