--- a/client/main.css
+++ b/client/main.css
@@ -1,19 +1,7 @@
-/* body {
-  font-family: sans-serif;
-  background-attachment: fixed;
-
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  padding: 0;
-  margin: 0;
-
-  font-size: 14px;
+body {
+background: #F9F1EC;
 }
-
+/* 
 button {
   font-weight: bold;
   font-size: 1em;
